--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-My GitHub Page 2
+<html>
+  <head>
+    <title>Chris Martin</title>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+  </head>
+  <body>
+  </body>
+</html>
