add some contact info

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
+    <div>Christopher Martin</div>
+    <div>ch.martin@gmail.com</div>
+    <div>https://github.com/chris-martin</div>
+    <div>https://twitter.com/chris__martin</div>
+    <div>https://plus.google.com/102949496905033075906</div>
+    <div>https://www.facebook.com/ch.martin</div>
   </body>
 </html>
