--- a/data/gt-class.html
+++ b/data/gt-class.html
@@ -2,7 +2,7 @@
   <head>
     <title>Classes taken at GT</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="js"></script>
+    <script type="text/javascript" src="gt-class.js"></script>
   </head>
   <body>
   </body>
