add course into, fall 2010

--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
     <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
-    <div>Christopher Martin</div>
-    <div>ch.martin@gmail.com</div>
-    <div>https://github.com/chris-martin</div>
-    <div>https://twitter.com/chris__martin</div>
-    <div>https://plus.google.com/102949496905033075906</div>
-    <div>https://www.facebook.com/ch.martin</div>
+    <h1>Christopher Martin</h1>
+    <h2>Contact info</h2>
+    <ul>
+      <li>ch.martin@gmail.com</li>
+      <li>https://github.com/chris-martin</li>
+      <li>https://twitter.com/chris__martin</li>
+      <li>https://plus.google.com/102949496905033075906</li>
+      <li>https://www.facebook.com/ch.martin</li>
+    <ul>
+    <h2>Current course enrollment at Georgia Tech</h2>
+    <ul>
+      <li>
+        <p>CS 6260 - Applied Cryptography</p>
+        <p>
+          Lecture notes:
+          <a href="https://github.com/chris-martin/crypto-notes">GitHub</a>,
+          <a href="http://chris-martin.github.com/crypto-notes/crypto.pdf">PDF</a>
+        </p>
+      </li>
+      <li>
+        <p>CS 6491 - Computer Graphics</p>
+      </li>
+    </ul>
   </body>
 </html>
