Link to codeswarm, mention work, link to gt-class.json

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       <li>https://plus.google.com/102949496905033075906</li>
       <li>https://www.facebook.com/ch.martin</li>
     </ul>
-    <h2>Current course enrollment at Georgia Tech</h2>
+    <h2>Work</h2>
+    <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
+    <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
+    <h2>School</h2>
+    <p>MS student in CS at Georgia Tech. Currently enrolled in:</p>
     <ul>
       <li>
         <p>CS 6260 - Applied Cryptography</p>
@@ -28,5 +32,6 @@
         <p>CS 6491 - Computer Graphics</p>
       </li>
     </ul>
+    <p><a href="data/gt-class.json">GT course history (undergrad+grad) in json format</a></p>
   </body>
 </html>
