--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>Chris Martin</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
+    <style type="text/css">
+      .twitter-timeline {
+        position: absolute; top: 0; right: 40px;
+      }
+    </style>
   </head>
   <body>
     <h1>Christopher Martin</h1>
@@ -33,5 +38,7 @@
       </li>
     </ul>
     <p><a href="data/gt-class.json">GT course history (undergrad+grad) in json format</a></p>
+    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/chris__martin" data-widget-id="299360876539027458">Tweets by @chris__martin</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </body>
 </html>
