--- a/index.html
+++ b/index.html
@@ -4,41 +4,50 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <style type="text/css">
+      body>div {
+        width: 800px;
+        position: relative;
+        margin: 0 auto;
+      }
       .twitter-timeline {
         position: absolute; top: 0; right: 40px;
       }
     </style>
   </head>
   <body>
-    <h1>Christopher Martin</h1>
-    <h2>Contact info</h2>
-    <ul>
-      <li>ch.martin@gmail.com</li>
-      <li>https://github.com/chris-martin</li>
-      <li>https://twitter.com/chris__martin</li>
-      <li>https://plus.google.com/102949496905033075906</li>
-      <li>https://www.facebook.com/ch.martin</li>
-    </ul>
-    <h2>Work</h2>
-    <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
-    <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
-    <h2>School</h2>
-    <p>MS student in CS at Georgia Tech. Currently enrolled in:</p>
-    <ul>
-      <li>
-        <p>CS 6260 - Applied Cryptography</p>
-        <p>
-          Lecture notes:
-          <a href="https://github.com/chris-martin/crypto-notes">GitHub</a>,
-          <a href="http://chris-martin.github.com/crypto-notes/crypto.pdf">PDF</a>
-        </p>
-      </li>
-      <li>
-        <p>CS 6491 - Computer Graphics</p>
-      </li>
-    </ul>
-    <p><a href="data/gt-class.json">GT course history (undergrad+grad) in json format</a></p>
-    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/chris__martin" data-widget-id="299360876539027458">Tweets by @chris__martin</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <div>
+      <article>
+        <h1>Christopher Martin</h1>
+        <h2>Contact info</h2>
+        <ul>
+          <li>ch.martin@gmail.com</li>
+          <li>https://github.com/chris-martin</li>
+          <li>https://twitter.com/chris__martin</li>
+          <li>https://plus.google.com/102949496905033075906</li>
+          <li>https://www.facebook.com/ch.martin</li>
+        </ul>
+        <h2>Work</h2>
+        <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
+        <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
+        <h2>School</h2>
+        <p>MS student in CS at Georgia Tech. Currently enrolled in:</p>
+        <ul>
+          <li>
+            <p>CS 6260 - Applied Cryptography</p>
+            <p>
+              Lecture notes:
+              <a href="https://github.com/chris-martin/crypto-notes">GitHub</a>,
+              <a href="http://chris-martin.github.com/crypto-notes/crypto.pdf">PDF</a>
+            </p>
+          </li>
+          <li>
+            <p>CS 6491 - Computer Graphics</p>
+          </li>
+        </ul>
+        <p><a href="data/gt-class.json">GT course history (undergrad+grad) in json format</a></p>
+      </article>
+      <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/chris__martin" data-widget-id="299360876539027458">Tweets by @chris__martin</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
   </body>
 </html>
