--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       }
       .twitter-timeline {
         position: absolute; top: 0; right: 40px;
+        width: 300px;
       }
     </style>
   </head>
