--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         position: relative;
         margin: 0 auto;
       }
+      article {
+        width: 480px;
+      }
       .twitter-timeline {
         position: absolute; top: 0; right: 40px;
         width: 300px;
