--- a/index.html
+++ b/index.html
@@ -34,20 +34,7 @@
         <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
         <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
         <h2>School</h2>
-        <p>MS student in CS at Georgia Tech. Currently enrolled in:</p>
-        <ul>
-          <li>
-            <p>CS 6260 - Applied Cryptography</p>
-            <p>
-              Lecture notes:
-              <a href="https://github.com/chris-martin/crypto-notes">GitHub</a>,
-              <a href="http://chris-martin.github.com/crypto-notes/crypto.pdf">PDF</a>
-            </p>
-          </li>
-          <li>
-            <p>CS 6491 - Computer Graphics</p>
-          </li>
-        </ul>
+        <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
         <p><a href="data/gt-class.json">GT course history (undergrad+grad) in json format</a></p>
       </article>
       <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/chris__martin" data-widget-id="299360876539027458">Tweets by @chris__martin</a>
