--- a/index.html
+++ b/index.html
@@ -3,20 +3,7 @@
     <title>Chris Martin</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
-    <style type="text/css">
-      body>div {
-        width: 800px;
-        position: relative;
-        margin: 0 auto;
-      }
-      article {
-        width: 480px;
-      }
-      .twitter-timeline {
-        position: absolute; top: 0; right: 40px;
-        width: 300px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="index.css"/>
   </head>
   <body>
     <div>
