--- a/index.html
+++ b/index.html
@@ -8,21 +8,35 @@
   <body>
     <div>
       <article>
-        <h1>Christopher Martin</h1>
-        <h2>Contact info</h2>
-        <ul>
-          <li>ch.martin@gmail.com</li>
-          <li>https://github.com/chris-martin</li>
-          <li>https://twitter.com/chris__martin</li>
-          <li>https://plus.google.com/102949496905033075906</li>
-          <li>https://www.facebook.com/ch.martin</li>
-        </ul>
-        <h2>Work</h2>
-        <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
-        <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
-        <h2>School</h2>
-        <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
-        <p><a href="data/gt-class.json">GT course history (undergrad+grad) in json format</a></p>
+        <header>
+          <h1>Christopher Martin</h1>
+        </header>
+        <section>
+          <header>
+            <h2>Contact info</h2>
+          </header>
+          <ul>
+            <li>ch.martin@gmail.com</li>
+            <li>https://github.com/chris-martin</li>
+            <li>https://twitter.com/chris__martin</li>
+            <li>https://plus.google.com/102949496905033075906</li>
+            <li>https://www.facebook.com/ch.martin</li>
+          </ul>
+        </section>
+        <section>
+          <header>
+            <h2>Work</h2>
+          </header>
+          <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
+          <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
+        </section>
+        <section>
+          <header>
+            <h2>School</h2>
+          </header>
+          <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
+          <p><a href="data/gt-class.html">GT course history</a></p>
+        </section>
       </article>
       <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/chris__martin" data-widget-id="299360876539027458">Tweets by @chris__martin</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
