--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css"/>
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
   </head>
   <body>
     <div>
