--- a/index.html
+++ b/index.html
@@ -1,44 +1,40 @@
-<html>
+<html lang="en">
   <head>
     <title>Chris Martin</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css"/>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
+    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen"/>
   </head>
   <body>
-    <div>
-      <article>
-        <header>
-          <h1>Christopher Martin</h1>
-        </header>
-        <section>
-          <header>
-            <h2>Contact info</h2>
-          </header>
-          <ul>
-            <li>ch.martin@gmail.com</li>
-            <li>https://github.com/chris-martin</li>
-            <li>https://twitter.com/chris__martin</li>
-            <li>https://plus.google.com/102949496905033075906</li>
-            <li>https://www.facebook.com/ch.martin</li>
-          </ul>
-        </section>
-        <section>
-          <header>
-            <h2>Work</h2>
-          </header>
+    <div class="container-narrow">
+      <div class="masthead">
+        <h3 class="muted">Christopher Martin</h3>
+      </div>
+      <hr/>
+      <div class="row-fluid">
+        <div class="span6">
+          <h4>Work</h4>
           <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
           <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
-        </section>
-        <section>
-          <header>
-            <h2>School</h2>
-          </header>
+        </div>
+        <div class="span6">
+          <h4>School</h4>
           <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
           <p><a href="data/gt-class.html">GT course history</a></p>
-        </section>
-      </article>
+        </div>
+      </div>
+      <hr/>
+      <div>
+        <ul>
+          <li>ch.martin@gmail.com</li>
+          <li>https://github.com/chris-martin</li>
+          <li>https://twitter.com/chris__martin</li>
+          <li>https://plus.google.com/102949496905033075906</li>
+          <li>https://www.facebook.com/ch.martin</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
