--- a/index.html
+++ b/index.html
@@ -6,34 +6,33 @@
     <link rel="stylesheet" type="text/css" href="index.css"/>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
     <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="elusive/css/elusive-webfont.css"/>
   </head>
   <body>
     <div class="container-narrow">
       <div class="masthead">
-        <h3 class="muted">Christopher Martin</h3>
+        <h3 class="muted"><i class="icon-user"></i> Christopher Martin</h3>
       </div>
       <hr/>
       <div class="row-fluid">
         <div class="span6">
-          <h4>Work</h4>
+          <h4><i class="icon-laptop"></i> Work</h4>
           <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
           <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
         </div>
         <div class="span6">
-          <h4>School</h4>
+          <h4><i class="icon-book"></i> School</h4>
           <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
           <p><a href="data/gt-class.html">GT course history</a></p>
         </div>
       </div>
       <hr/>
       <div>
-        <ul>
-          <li>ch.martin@gmail.com</li>
-          <li>https://github.com/chris-martin</li>
-          <li>https://twitter.com/chris__martin</li>
-          <li>https://plus.google.com/102949496905033075906</li>
-          <li>https://www.facebook.com/ch.martin</li>
-        </ul>
+        <p><i class="icon-envelope"></i> <a href="mailto:ch.martin@gmail.com">ch.martin@gmail.com</a></p>
+        <p><i class="icon-github"></i> <a href="https://github.com/chris-martin">github.com/chris-martin</a></p>
+        <p><i class="icon-twitter"></i> <a href="https://twitter.com/chris__martin">twitter.com/chris__martin</a></p>
+        <p><i class="icon-googleplus"></i> <a href="https://plus.google.com/102949496905033075906">gplus.to/chmartin</a></p>
+        <p><i class="icon-facebook"></i> <a href="https://www.facebook.com/ch.martin">facebook.com/ch.martin</a></p>
       </div>
     </div>
   </body>
