add stackoverflow link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <div>
         <p><i class="icon-envelope"></i> <a href="mailto:ch.martin@gmail.com">ch.martin@gmail.com</a></p>
         <p><i class="icon-github"></i> <a href="https://github.com/chris-martin">github.com/chris-martin</a></p>
+        <p><i class="icon-stackoverflow"></i> <a href="http://stackoverflow.com/users/402884">stackoverflow.com/users/402884</a></p>
         <p><i class="icon-twitter"></i> <a href="https://twitter.com/chris__martin">twitter.com/chris__martin</a></p>
         <p><i class="icon-googleplus"></i> <a href="https://plus.google.com/102949496905033075906">gplus.to/chmartin</a></p>
         <p><i class="icon-facebook"></i> <a href="https://www.facebook.com/ch.martin">facebook.com/ch.martin</a></p>
