--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p><i class="icon-twitter"></i> Twitter <a href="https://twitter.com/chris__martin">@chris__martin</a></p>
           <p><i class="icon-github"></i> GitHub <a href="https://github.com/chris-martin">chris-martin</a></p>
           <p><i class="icon-stackoverflow"></i> Stack Overflow <a href="http://stackoverflow.com/users/402884">402884</a></p>
-          <p><i class="icon-googleplus"></i> Google+ <a href="https://plus.google.com/102949496905033075906">102949496905033075906</a></p>
+          <p><i class="icon-googleplus"></i> G+ <a href="https://plus.google.com/102949496905033075906">102949496905033075906</a></p>
           <p><i class="icon-facebook"></i> Facebook <a href="https://www.facebook.com/ch.martin">ch.martin</a></p>
         </div>
       </div>
