--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <hr/>
       <div class="row-fluid">
         <div class="span4 contact-links">
-          <p><i class="icon-envelope"></i> Email <a href="mailto:ch.martin@gmail.com">ch.martin@gmail.com</a></p>
-          <p><i class="icon-twitter"></i> Twitter <a href="https://twitter.com/chris__martin">@chris__martin</a></p>
-          <p><i class="icon-github"></i> GitHub <a href="https://github.com/chris-martin">chris-martin</a></p>
-          <p><i class="icon-stackoverflow"></i> Stack Overflow <a href="http://stackoverflow.com/users/402884">402884</a></p>
-          <p><i class="icon-googleplus"></i> G+ <a href="https://plus.google.com/102949496905033075906">102949496905033075906</a></p>
-          <p><i class="icon-facebook"></i> Facebook <a href="https://www.facebook.com/ch.martin">ch.martin</a></p>
+          <p><i class="icon-envelope"></i> <a href="mailto:ch.martin@gmail.com">ch.martin@gmail.com</a></p>
+          <p><i class="icon-twitter"></i> <a href="https://twitter.com/chris__martin">@chris__martin on Twitter</a></p>
+          <p><i class="icon-github"></i> <a href="https://github.com/chris-martin">chris-martin on GitHub</a></p>
+          <p><i class="icon-stackoverflow"></i> <a href="http://stackoverflow.com/users/402884">Stack Overflow</a></p>
+          <p><i class="icon-googleplus"></i> <a href="https://plus.google.com/102949496905033075906">Google+</a></p>
+          <p><i class="icon-facebook"></i> <a href="https://www.facebook.com/ch.martin">ch.martin on Facebook</a></p>
         </div>
       </div>
     </div>
