--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <p><i class="icon-github"></i> <a href="https://github.com/chris-martin">chris-martin on GitHub</a></p>
           <p><i class="icon-stackoverflow"></i> <a href="http://stackoverflow.com/users/402884">Stack Overflow</a></p>
           <p><i class="icon-googleplus"></i> <a href="https://plus.google.com/102949496905033075906">Google+</a></p>
-          <p><i class="icon-facebook"></i> <a href="https://www.facebook.com/ch.martin">ch.martin on Facebook</a></p>
+          <p><i class="icon-facebook"></i> <a href="https://www.facebook.com/ch.martin">Facebook</a></p>
         </div>
       </div>
     </div>
