--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </div>
       <hr/>
       <div class="row-fluid">
-        <div class="span4 contact-links">
+        <div class="span1"></div>
+        <div class="span5">
           <p><i class="icon-envelope"></i> <a href="mailto:ch.martin@gmail.com">ch.martin@gmail.com</a></p>
           <p><i class="icon-twitter"></i> <a href="https://twitter.com/chris__martin">@chris__martin</a></p>
           <p><i class="icon-github"></i> <a href="https://github.com/chris-martin">GitHub</a></p>
@@ -36,6 +37,10 @@
           <p><i class="icon-googleplus"></i> <a href="https://plus.google.com/102949496905033075906">Google+</a></p>
           <p><i class="icon-facebook"></i> <a href="https://www.facebook.com/ch.martin">Facebook</a></p>
         </div>
+        <div class="span5">
+          <img src="photo.png" width="200" height="200"/>
+        </div>
+        <div class="span1"></div>
       </div>
     </div>
   </body>
