--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container-narrow">
       <div class="masthead">
-        <h3 class="muted"><i class="icon-user"></i> Christopher Martin</h3>
+        <h3 class="muted">Christopher Martin</h3>
       </div>
       <hr/>
       <div class="row-fluid">
