fixed footer, responsive fun

--- a/index.html
+++ b/index.html
@@ -3,41 +3,67 @@
     <title>Chris Martin</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css"/>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
-    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen"/>
     <link rel="stylesheet" type="text/css" href="elusive/css/elusive-webfont.css"/>
+    <link rel="stylesheet" type="text/css" href="index.css"/>
   </head>
   <body>
-    <div class="container-narrow">
-      <div class="masthead">
-        <h3 class="muted">Christopher Martin</h3>
+    <header class="masthead">
+      <div class="container">
+        <h3 class="muted">Chris Martin</h3>
       </div>
-      <hr/>
-      <div class="row-fluid">
-        <div class="span6">
-          <h4><i class="icon-laptop"></i> Work</h4>
-          <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
-          <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
-        </div>
-        <div class="span6">
-          <h4><i class="icon-book"></i> School</h4>
-          <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
-          <p><a href="data/gt-class.html">GT course history</a></p>
-        </div>
-      </div>
-      <hr/>
-      <div class="row-fluid">
-        <div class="span3"><img src="photo.png" width="200" height="200"/></div>
-        <div class="span9">
-          <p><i class="icon-envelope"></i> <a href="mailto:ch.martin@gmail.com">ch.martin@gmail.com</a></p>
-          <p><i class="icon-twitter"></i> <a href="https://twitter.com/chris__martin">@chris__martin</a></p>
-          <p><i class="icon-github"></i> <a href="https://github.com/chris-martin">GitHub</a></p>
-          <p><i class="icon-stackoverflow"></i> <a href="http://stackoverflow.com/users/402884">Stack Overflow</a></p>
-          <p><i class="icon-googleplus"></i> <a href="https://plus.google.com/102949496905033075906">Google+</a></p>
-          <p><i class="icon-facebook"></i> <a href="https://www.facebook.com/ch.martin">Facebook</a></p>
+    </header>
+    <section class="middle">
+      <div class="container">
+        <hr/>
+        <div class="row-fluid">
+          <div class="span6">
+            <h4><i class="icon-laptop"></i> Work</h4>
+            <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
+            <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
+          </div>
+          <div class="span6">
+            <h4><i class="icon-book"></i> School</h4>
+            <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
+            <p><a href="data/gt-class.html">GT course history</a></p>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
+    <section class="footer">
+      <div class="container">
+        <div class="row-fluid">
+          <div class="span6">
+            <img src="photo.png"/>
+          </div>
+          <div class="span6 links">
+            <p>
+              <i class="icon-envelope"></i>
+              <a href="mailto:ch.martin@gmail.com">ch.martin@gmail.com</a>
+            </p>
+            <p>
+              <i class="icon-twitter"></i>
+              <a href="https://twitter.com/chris__martin">@chris__martin</a>
+            </p>
+            <p>
+              <i class="icon-github"></i>
+              <a href="https://github.com/chris-martin">GitHub</a>
+            </p>
+            <p>
+              <i class="icon-stackoverflow"></i>
+              <a href="http://stackoverflow.com/users/402884">Stack Overflow</a>
+            </p>
+            <p>
+              <i class="icon-googleplus"></i>
+              <a href="https://plus.google.com/102949496905033075906">Google+</a>
+            </p>
+            <p>
+              <i class="icon-facebook"></i>
+              <a href="https://www.facebook.com/ch.martin">Facebook</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
