move icons into hyperlinks

--- a/index.html
+++ b/index.html
@@ -37,30 +37,24 @@
             <img src="photo.png"/>
           </div>
           <div class="span6 links">
-            <p>
-              <i class="icon-envelope"></i>
-              <a href="mailto:ch.martin@gmail.com">ch.martin@gmail.com</a>
-            </p>
-            <p>
-              <i class="icon-twitter"></i>
-              <a href="https://twitter.com/chris__martin">@chris__martin</a>
-            </p>
-            <p>
-              <i class="icon-github"></i>
-              <a href="https://github.com/chris-martin">GitHub</a>
-            </p>
-            <p>
-              <i class="icon-stackoverflow"></i>
-              <a href="http://stackoverflow.com/users/402884">Stack Overflow</a>
-            </p>
-            <p>
-              <i class="icon-googleplus"></i>
-              <a href="https://plus.google.com/102949496905033075906">Google+</a>
-            </p>
-            <p>
-              <i class="icon-facebook"></i>
-              <a href="https://www.facebook.com/ch.martin">Facebook</a>
-            </p>
+            <a href="mailto:ch.martin@gmail.com">
+              <i class="icon-envelope"></i>ch.martin@gmail.com
+            </a>
+            <a href="https://twitter.com/chris__martin">
+              <i class="icon-twitter"></i>@chris__martin
+            </a>
+            <a href="https://github.com/chris-martin">
+              <i class="icon-github"></i>GitHub
+            </a>
+            <a href="http://stackoverflow.com/users/402884">
+              <i class="icon-stackoverflow"></i>Stack Overflow
+            </a>
+            <a href="https://plus.google.com/102949496905033075906">
+              <i class="icon-googleplus"></i>Google+
+            </a>
+            <a href="https://www.facebook.com/ch.martin">
+              <i class="icon-facebook"></i>Facebook
+            </a>
           </div>
         </div>
       </div>
