--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
   <body>
     <header class="masthead">
       <div class="container">
-        <h3 class="muted">Chris Martin</h3>
+        <h1 class="muted">
+          <svg>
+            <text y="1.5em">
+              Chris Martin
+            </text>
+          </svg>
+        </h3>
       </div>
     </header>
     <section class="middle">
       <div class="container">
-        <hr/>
         <div class="row-fluid">
           <div class="span6">
             <h4><i class="icon-laptop"></i> Work</h4>
@@ -33,10 +38,10 @@
     <section class="footer">
       <div class="container">
         <div class="row-fluid">
-          <div class="span6">
+          <div class="span4">
             <img src="photo.png"/>
           </div>
-          <div class="span6 links">
+          <div class="span4 links">
             <a href="mailto:ch.martin@gmail.com">
               <i class="icon-envelope"></i>ch.martin@gmail.com
             </a>
