--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
   <head>
     <title>Chris Martin</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
     <link rel="stylesheet" type="text/css" href="elusive/css/elusive-webfont.css"/>
@@ -19,6 +20,11 @@
         </h3>
       </div>
     </header>
+    <div class="transition transition-header-middle">
+      <svg viewBox="0 0 100 100" preserveAspectRatio="none">
+        <path d="m 0 100 l 0 -50 s 50 -50 100 0 l 0 50"/>
+      </svg>
+    </div>
     <section class="middle">
       <div class="container">
         <div class="row-fluid">
@@ -35,6 +41,11 @@
         </div>
       </div>
     </section>
+    <div class="transition transition-middle-footer">
+      <svg>
+        <rect x="0" y="0" width="100%" height="150"/>
+      </svg>
+    </div>
     <section class="footer">
       <div class="container">
         <div class="row-fluid">
@@ -64,5 +75,17 @@
         </div>
       </div>
     </section>
+    <svg style="height: 0;">
+      <defs>
+        <linearGradient
+            id="transition-middle-footer-gradient"
+            x1="0" x2="0" y1="0" y2="1">
+          <stop offset="0.4"/>
+          <stop offset="0.48"/>
+          <stop offset="0.52"/>
+          <stop offset="0.6"/>
+        </linearGradient>
+      </defs>
+    </svg>
   </body>
 </html>
