--- a/index.html
+++ b/index.html
@@ -9,32 +9,29 @@
     <link rel="stylesheet" type="text/css" href="index.css"/>
   </head>
   <body>
-    <header class="masthead">
+    <header class="header">
+      <svg>
+        <rect x="0" y="0" width="100%" height="100%"/>
+      </svg>
       <div class="container">
-        <h1 class="muted">
-          <svg>
-            <text y="1.5em">
-              Chris Martin
-            </text>
-          </svg>
-        </h3>
+        <h1>Chris Martin</h1>
       </div>
     </header>
     <div class="transition transition-header-middle">
-      <svg viewBox="0 0 100 100" preserveAspectRatio="none">
-        <path d="m 0 100 l 0 -50 s 50 -50 100 0 l 0 50"/>
+      <svg viewBox="0 0 1000 100" preserveAspectRatio="none">
+        <path d="m 0 100 m 0 -50 s 500 -50 1000 0 m 0 50"/>
       </svg>
     </div>
     <section class="middle">
       <div class="container">
         <div class="row-fluid">
           <div class="span6">
-            <h4><i class="icon-laptop"></i> Work</h4>
+            <h4><i class="icon-laptop"></i>Work</h4>
             <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
             <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
           </div>
           <div class="span6">
-            <h4><i class="icon-book"></i> School</h4>
+            <h4><i class="icon-book"></i>School</h4>
             <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
             <p><a href="data/gt-class.html">GT course history</a></p>
           </div>
@@ -42,8 +39,8 @@
       </div>
     </section>
     <div class="transition transition-middle-footer">
-      <svg>
-        <rect x="0" y="0" width="100%" height="150"/>
+      <svg viewBox="0 0 100 100" preserveAspectRatio="none">
+        <rect x="0" y="0" width="100" height="100"/>
       </svg>
     </div>
     <section class="footer">
@@ -98,6 +95,10 @@
           <stop offset="0.52"/>
           <stop offset="0.6"/>
         </linearGradient>
+        <pattern id="header-pattern" width="12" height="12" patternUnits="userSpaceOnUse">
+          <path d="m 6 -1 l 0 14"/>
+          <path d="m -1 6 l 14 0"/>
+        </pattern>
       </defs>
     </svg>
   </body>
