--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <header class="header">
       <svg>
-        <rect x="0" y="0" width="100%" height="100%"/>
+        <rect x="0" y="0" width="100%" height="100%"
+          fill="url(#header-pattern)"/>
       </svg>
       <div class="container">
         <h1>Chris Martin</h1>
@@ -40,7 +41,8 @@
     </section>
     <div class="transition transition-middle-footer">
       <svg viewBox="0 0 100 100" preserveAspectRatio="none">
-        <rect x="0" y="0" width="100" height="100"/>
+        <rect x="0" y="0" width="100" height="100"
+          fill="url(#transition-middle-footer-gradient)"/>
       </svg>
     </div>
     <section class="footer">
@@ -95,7 +97,8 @@
           <stop offset="0.52"/>
           <stop offset="0.6"/>
         </linearGradient>
-        <pattern id="header-pattern" width="12" height="12" patternUnits="userSpaceOnUse">
+        <pattern id="header-pattern" width="12" height="12"
+            patternUnits="userSpaceOnUse">
           <path d="m 6 -1 l 0 14"/>
           <path d="m -1 6 l 14 0"/>
         </pattern>
