more text: programming languages

--- a/index.html
+++ b/index.html
@@ -25,17 +25,89 @@
     </div>
     <section class="middle">
       <div class="container">
-        <div class="row-fluid">
+        <div class="row">
           <div class="span6">
-            <h4><i class="icon-laptop"></i>Work</h4>
-            <p>Software developer at Georgia Tech Research Institute Cyber Tech and Info Security Lab since 2010.</p>
-            <p>Some bits of open source work are listed at <a href="http://codeswarm.org/">codeswarm.org</a>.</p>
+            <h4><i class="icon-briefcase"></i>Work</h4>
+            <ul>
+              <li>
+                <b>Georgia Tech Research Institute -
+                  Cyber Tech and Info Security Lab</b>
+              </li>
+              <ul>
+                <li><b>Research scientist</b> 2010&mdash;present</li>
+                <li><b>Software co-op</b> 2007&mdash;2010</li>
+              </ul>
+              <li>
+                Some small open source projects that have spun off from
+                my work at GTRI are listed at
+                <a href="http://codeswarm.org/">codeswarm.org</a>.
+              </li>
+            </ul>
           </div>
           <div class="span6">
             <h4><i class="icon-book"></i>School</h4>
-            <p>MS student in CS at Georgia Tech. Progress: 24/36 hours.</p>
-            <p><a href="data/gt-class.html">GT course history</a></p>
+            <ul>
+              <li>
+                <b>Computer Science MS, Georgia Tech</b>
+                2010&mdash;December 2013
+              </li>
+              <ul>
+                <li>Specialization in information security.</li>
+              </ul>
+              <li>
+                <b>Computer Science BS, Georgia Tech</b>
+                2005&mdash;2010
+              </li>
+              <ul>
+                <li>
+                  Specialization in theory and computing platforms.
+                  GPA: 3.78
+                </li>
+              </ul>
+            </ul>
+            <p><a href="data/gt-class.html">List of courses completed</a></p>
           </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <h4><i class="icon-laptop"></i>Languages</h4>
+            <ul>
+              <li>
+                <b>Scala</b> I began using Scala in 2012 for 3d
+                graphics project using JOGL, and it quickly became my favorite
+                and most productive language.
+              </li>
+              <li>
+                <b>Java</b> I have been using Java since I started as an
+                undergraduate student in 2005 and am thoroughly practiced with it
+                through my professional work with Servlet-based web applications.
+                Since adopting Scala, I have lost patience with Java's inadequacies.
+              </li>
+              <li>
+                <b>JavaScript</b> My JavaScript knowledge comes from a combination
+                of hobby web design and working with rich webapps at GTRI since 2007.
+              </li>
+              <li>
+                <b>Python</b> I have dabbled with Python in small
+                projects including a rudimentary audio synthesizer.
+              </li>
+              <li>
+                <b>C++</b> I am mildly capable with C++, mostly from
+                school work in which I have written an LLVM extension and a Linux
+                kernel module.
+              </li>
+              <li>
+                <b>PHP</b> I used PHP for my first web application in
+                2003 and have revisited it for small projects since then.
+                I have no fondness for it.
+              </li>
+            </ul>
+          </div>
+          <!-- <div>
+            <div class="span6">
+              <h4><i class="icon-wrench"></i>Tools and Libraries</h4>
+            </div>
+          </div> -->
         </div>
       </div>
     </section>
