--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 projects including a rudimentary audio synthesizer.
               </li>
               <li>
-                <b>C++</b> I am mildly capable with C++, mostly from
-                school work in which I have written an LLVM extension and a Linux
-                kernel module.
+                <b>C++</b> I am mildly capable with C/C++, mostly from
+                school work in which I have written an LLVM extension and
+                a Linux kernel module.
               </li>
               <li>
                 <b>PHP</b> I used PHP for my first web application in
