--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 projects including a rudimentary audio synthesizer.
               </li>
               <li>
-                <b>C++</b> I am mildly capable with C/C++, mostly from
+                <b>C/C++</b> I am mildly capable with C/C++, mostly from
                 school work in which I have written an LLVM extension and
                 a Linux kernel module.
               </li>
