--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 Since adopting Scala, I have lost patience with Java's inadequacies.
               </li>
               <li>
-                <b>JavaScript</b> My JavaScript knowledge comes from a combination
-                of hobby web design and working with rich webapps at GTRI since 2007.
+                <b>JavaScript</b> My JavaScript knowledge comes from working with
+                rich webapps at GTRI since 2007 and various hobby web projects.
               </li>
               <li>
                 <b>Python</b> I have dabbled with Python in small
