varying programming language font sizes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="span12">
+          <div class="span12 languages">
             <h4><i class="icon-laptop"></i>Languages</h4>
             <ul>
               <li>
