move stuff around

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container">
         <div class="row">
           <div class="span6">
-            <h4><i class="icon-briefcase"></i>Work</h4>
+            <h3><i class="icon-briefcase"></i>Work</h3>
             <ul>
               <li>
                 <b>Georgia Tech Research Institute -
@@ -43,9 +43,7 @@
                 <a href="http://codeswarm.org/">codeswarm.org</a>.
               </li>
             </ul>
-          </div>
-          <div class="span6">
-            <h4><i class="icon-book"></i>School</h4>
+            <h3><i class="icon-book"></i>School</h3>
             <ul>
               <li>
                 <b>Computer Science MS, Georgia Tech</b>
@@ -67,45 +65,69 @@
             </ul>
             <p><a href="data/gt-class.html">List of courses completed</a></p>
           </div>
-        </div>
-        <div class="row">
-          <div class="span12 languages">
-            <h4><i class="icon-laptop"></i>Languages</h4>
-            <ul>
-              <li>
-                <b>Scala</b> I began using Scala in 2012 for 3d
-                graphics project using JOGL, and it quickly became my favorite
-                and most productive language.
-              </li>
-              <li>
-                <b>Java</b> I have been using Java since I started as an
-                undergraduate student in 2005 and am thoroughly practiced with it
-                through my professional work with Servlet-based web applications.
-                Since adopting Scala, I have lost patience with Java's inadequacies.
-              </li>
-              <li>
-                <b>JavaScript</b> My JavaScript knowledge comes from working with
-                rich webapps at GTRI since 2007 and various hobby web projects.
-              </li>
-              <li>
-                <b>Python</b> I have dabbled with Python in small
-                projects including a rudimentary audio synthesizer.
-              </li>
-              <li>
-                <b>C/C++</b> I am mildly capable with C/C++, mostly from
-                school work in which I have written an LLVM extension and
-                a Linux kernel module.
-              </li>
-              <li>
-                <b>PHP</b> I used PHP for my first web application in
-                2003 and have revisited it for small projects since then.
-                I have no fondness for it.
-              </li>
-            </ul>
+          <div class="span6">
+            <h3><i class="icon-laptop"></i>Programming expertise</h3>
+            <table class="languages">
+              <tr>
+                <th>Scala</th>
+                <td>
+                  <p>
+                    I began using Scala in 2012 for 3d graphics project, and it
+                    quickly became my favorite and most productive language.
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <th>Java</th>
+                <td>
+                  <p>
+                    I started with Java in 2005 and since have worked extensively
+                    with Servlet-based web applications. Since adopting Scala,
+                    I have lost patience with Java's inadequacies.
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <th>JavaScript</th>
+                <td>
+                  <p>
+                    My JavaScript knowledge comes from working with
+                    rich webapps at GTRI since 2007 and various hobby web projects.
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <th>Python</th>
+                <td>
+                  <p>
+                    I have dabbled with Python in small projects including a
+                    rudimentary audio synthesizer.
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <th>C/C++</th>
+                <td>
+                  <p>
+                    I am mildly capable with C/C++, mostly from school work in which
+                    I have written an LLVM extension and a Linux kernel module.
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <th>PHP</th>
+                <td>
+                  <p>
+                    I used PHP for my first web application in 2003 and have revisited
+                    it for small projects since then. I have no fondness for it.
+                  </p>
+                </td>
+              </tr>
+            </table>
           </div>
           <!-- <div>
             <div class="span6">
-              <h4><i class="icon-wrench"></i>Tools and Libraries</h4>
+              <h3><i class="icon-wrench"></i>Tools and Libraries</h3>
             </div>
           </div> -->
         </div>
