--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <th>Scala</th>
                 <td>
                   <p>
-                    I began using Scala in 2012 for 3d graphics project, and it
+                    I began using Scala in 2012 for 3D graphics project, and it
                     quickly became my favorite and most productive language.
                   </p>
                 </td>
