--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
               </tr>
             </table>
           </div>
-          <!-- <div>
+          <div>
             <div class="span6">
-              <h3><i class="icon-wrench"></i>Tools and Libraries</h3>
+              <h3><i class="icon-wrench"></i>Tools and libraries</h3>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
