--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p><a href="data/gt-class.html">List of courses completed</a></p>
           </div>
           <div class="span6">
-            <h3><i class="icon-laptop"></i>Programming expertise</h3>
+            <h3><i class="icon-heart"></i>Programming</h3>
             <table class="languages">
               <tr>
                 <th>Scala</th>
