--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
               <h3><i class="icon-wrench"></i>Tools and libraries</h3>
             </div>
           </div>
+          <div>
+            <div class="offset6 span6">
+              <h3><i class="icon-key"></i>Philosophy</h3>
+            </div>
+          </div>
         </div>
       </div>
     </section>
